minor formatting
